# tape-rot

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/cli/: Options.cpp  Options.hpp
src/core/: Frame.cpp  Frame.hpp  Random.cpp  Random.hpp
src/effects/: ChromaDegrade.cpp  ChromaDegrade.hpp  Dropout.cpp  Dropout.hpp  Effect.hpp  EffectPipeline.cpp  EffectPipeline.hpp  EffectUtil.hpp  HeadSwitchNoise.cpp  HeadSwitchNoise.hpp  LineJitter.cpp  LineJitter.hpp
tests/: test_main.cpp
